--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,18 +26,29 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-
-.shadowText{
- filter:drop-shadow(0px 0px 1px black);
+.shadowText {
+  filter: drop-shadow(0px 0px 1px black);
 }
 
 .folderIcons {
-    display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%,76px),1fr));
-    text-align: center;
-    justify-items: center;
-    column-gap:1rem
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, 76px), 1fr));
+  text-align: center;
+  justify-items: center;
+  column-gap: 2rem;
+  padding: 1rem;
+  
+}
 
+
+
+.musicPlayer {
+  background: rgba(74, 144, 226, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
