--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,17 +32,19 @@ body {
 
 .folderIcons {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  display: grid;
+
+  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
   grid-template-columns: repeat(auto-fill, minmax(min(100%, 76px), 1fr));
   text-align: center;
+  align-items: start;
+  grid-template-rows: repeat(auto-fill, minmax(min(100px, 50%), 1fr));
   justify-items: center;
-  column-gap: 2rem;
+  column-gap: min(2rem, 10%);
   padding: 1rem;
-  
+  row-gap: 1rem;
+  height: 90%;
+  overflow-y: scroll;
 }
-
-
 
 .musicPlayer {
   background: rgba(74, 144, 226, 0.25);
